--- a/linkedin clone/index.html
+++ b/linkedin clone/index.html
@@ -240,7 +240,7 @@
                 </div>
             </div>
 
-            <div class="secondContainer  mx-3 h-auto: w-96 max-sm:w-fit max-sm:mx-px">
+            <div class="secondContainer  mx-3 h-auto: w-[555px] max-sm:w-fit max-sm:mx-px max-lg:w-96">
 
                 <div class="startByPost bg-gray-800  border border-gray-800 rounded-2xl">
                     <div class="profileTop flex flex-col">
